<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/playlist_welcome_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/playlist_empty_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist_empty_title"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            />

        <TextView
            android:id="@+id/playlist_empty_text"
            android:layout_below="@id/playlist_empty_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/playlist_empty_text_top"/>

    <View
        android:id="@+id/playlist_empty_line_top"
        android:layout_below="@id/playlist_empty_text"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:background="@color/grayStart"/>


    <RadioGroup
        android:id="@+id/subscription_selection_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radioNone"
        android:layout_below="@id/playlist_empty_line_top">

        <RadioButton
            android:id="@+id/radioNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:text="@string/playlist_empty_mode_one" />

        <TextView
            android:id="@+id/radioNoneDescription"
            android:layout_below="@id/radioNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grayDark"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:text="@string/playlist_empty_mode_one_desc"/>

        <RadioButton
            android:id="@+id/radioAll"
            android:layout_below="@id/radioNoneDescription"
            android:layout_alignLeft="@id/radioNone"
            android:layout_alignStart="@id/radioNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_marginTop="20dp"
            android:text="@string/playlist_empty_mode_two" />

        <TextView
            android:id="@+id/radioAllDescription"
            android:layout_below="@id/radioAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grayDark"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:text="@string/playlist_empty_mode_two_desc"/>

    </RadioGroup>

    <View
        android:id="@+id/playlist_empty_line_bottom"
        android:layout_below="@id/subscription_selection_type"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/grayStart"/>

    <TextView
        android:id="@+id/more_filters_text"
        android:layout_below="@id/playlist_empty_line_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/playlist_empty_text_bottom"/>

    </RelativeLayout>
