...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numColumns="2"
        android:stretchMode="columnWidth" />

    <RelativeLayout
        android:id="@+id/subscription_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
...
