<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
>

     <ViewStub android:id="@+id/app_content"
               android:inflatedId="@+id/pager"
               android:layout="@layout/view_pager_main"
               android:layout_width="match_parent"
               android:layout_height="match_parent" />


...
