...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/discovery_search_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--
        Prevent the SearchView from popping up the Keyboard
        http://stackoverflow.com/questions/21624282/searchview-gains-focus-and-opens-keyboard-when-returning-from-another-activity
...
            android:layout_below="@id/discovery_searchView_container"
            />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_result_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="ifContentScrolls"
        android:layout_below="@+id/discovery_search_container"
        />
...
