<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <org.bottiger.podcast.views.SquareImageView
        android:id="@+id/grid_image"
        style="@style/PodcastImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        />
    <TextView
        android:id="@+id/grid_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
    	android:lines="1"
        android:ellipsize="end"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_gravity="bottom"
        android:textColor="@android:color/white"
        android:background="#AA000000"
        />
</FrameLayout>