...
            android:layout_centerHorizontal="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_feedback_title"
            android:id="@+id/checkBox_usage"
            android:layout_below="@+id/subscription_empty_text"
            android:layout_centerHorizontal="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_cloud_support_title"
            android:id="@+id/checkBox_cloud"
            android:layout_below="@+id/checkBox_usage"
            android:layout_alignLeft="@id/checkBox_usage"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

...
