...
    <string name="pref_screen_rotation_key" translatable="false">pref_screen_rotation</string>
    <string name="pref_subscriptions_columns_key" translatable="false">pref_subscriptions_columns</string>
    <string name="pref_cloud_category_cloud_services_key" translatable="false">pref_cloud_category_cloud_services</string>
    <string name="pref_webservices_discovery_engine_key" translatable="false" >pref_webservices_discovery_engine</string>
    <string name="pref_import_opml_key" translatable="false">pref_import_opml</string>
    <string name="pref_export_opml_key" translatable="false">pref_export_opml</string>
    <string name="pref_anonymous_feedback_key" translatable="false" >pref_anonymous_feedback</string>
    <string name="pref_cloud_support_key" translatable="false" >pref_cloud_support</string>
    <string name="pref_gpodder_support_key" translatable="false" >pref_gpodder_support</string>
    <string name="pref_gpodder_username_key" translatable="false" >pref_gpodder_username</string>
    <string name="pref_gpodder_password_key" translatable="false" >pref_gpodder_password</string>
    <string name="pref_playlist_show_listened_key" translatable="false" >pref_playlist_show_listened</string>
    <string name="pref_playlist_subscriptions_key" translatable="false" >pref_playlist_selected_subscriptions</string>
    <string name="pref_playlist_subscriptions_values_key" translatable="false" >pref_playlist_filter_value_key</string>
...
