<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/subscription_grid_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/themeBackground">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="2"
            android:stretchMode="columnWidth" />

</FrameLayout>