...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <org.bottiger.podcast.views.FeedRecyclerView
        android:id="@+id/feed_recycler_view"
        style="@style/FeedViewRecyclerView"
        android:scrollbars="vertical"
        android:fadeScrollbars="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
...
